@@ -21,6 +21,9 @@ release.
 ezmlm-idx-7.0.2, ????-??-??
 ===========================
 
+- Fixed selection of [un]subscribe subject line for moderated
+  subscriptions.
+
 ezmlm-idx-7.0.1, 2009-07-09
 ===========================
 
